--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.4",
     "@reduxjs/toolkit": "^2.2.3",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.373.0",
