--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
     "@reduxjs/toolkit": "^2.2.3",
+    "axios": "^1.6.8",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.373.0",
     "react": "^18.2.0",
